--- a/android/build.gradle
+++ b/android/build.gradle
@@ -48,4 +48,5 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation project(path: ':nativesdk')
+    implementation 'com.google.code.gson:gson:2.9.1'
 }
