--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -45,18 +45,18 @@
 	<false/>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
-    <key>CFBundleURLTypes</key>
-    <array>
-        <dict>
-            <key>CFBundleTypeRole</key>
-            <string>Editor</string>
-            <key>CFBundleURLName</key>
-            <string>xyz.myapp</string>
-            <key>CFBundleURLSchemes</key>
-            <array>
-                <string>tribesxyz</string>
-            </array>
-        </dict>
-    </array>
+  <key>CFBundleURLTypes</key>
+  <array>
+      <dict>
+          <key>CFBundleTypeRole</key>
+          <string>Editor</string>
+          <key>CFBundleURLName</key>
+          <string>xyz.myapp</string>
+          <key>CFBundleURLSchemes</key>
+          <array>
+              <string>tribesxyzsample</string>
+          </array>
+      </dict>
+  </array>
 </dict>
 </plist>
