--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -1,4 +1,4 @@
-include ':app', ':nativesdk'
+include ':app'
 
 def localPropertiesFile = new File(rootProject.projectDir, "local.properties")
 def properties = new Properties()
@@ -10,5 +10,3 @@ def flutterSdkPath = properties.getProperty("flutter.sdk")
 assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
 apply from: "$flutterSdkPath/packages/flutter_tools/gradle/app_plugin_loader.gradle"
 
-
-project(':nativesdk').projectDir = new File('/Users/hish/Developer/3rd-party/coinbase-wallet-sdk/packages/wallet-native-sdk/android/CoinbaseWalletNativeSDK')
