add "isAppInstalled" to check whether CBW is installed

--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -45,6 +45,10 @@
 	<false/>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+  <key>LSApplicationQueriesSchemes</key>
+  <array>
+    <string>cbwallet</string>
+  </array>
   <key>CFBundleURLTypes</key>
   <array>
       <dict>
